# slate

./: CMakeLists.txt  README.md
shaders/: simple_shader.vert  ui.frag  ui.vert
src/: main.cpp
src/core/: camera.cpp  camera.hpp  engine.cpp  engine.hpp
src/renderer/: mesh.cpp  mesh.hpp  renderer.hpp  vertex.hpp
src/renderer/vulkan/: vulkan_renderer.cpp  vulkan_renderer.hpp
src/resources/: mesh_loader.cpp  mesh_loader.hpp
src/ui/: ui_button.hpp  ui_element.cpp  ui_element.hpp  ui_vertex.hpp
